--- a/ProjFinalAndroid/app/src/main/res/values/strings.xml
+++ b/ProjFinalAndroid/app/src/main/res/values/strings.xml
@@ -7,12 +7,14 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_scores">Scores</string>
+    <string name="menu_new_game">New Game</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+    <string name="score_list_label">HIGH SCORES</string>
 
     <!--  -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
